{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 63,
  "lineage": "3e5845b3-f2fd-a541-306e-033a40cd1a7f",
  "resources": [
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb",
      "name": "grafana_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:loadbalancer/app/local-test-grafana-alb/79df55cfcd74d68b",
            "arn_suffix": "app/local-test-grafana-alb/79df55cfcd74d68b",
            "dns_name": "local-test-grafana-alb-95899718.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:loadbalancer/app/local-test-grafana-alb/79df55cfcd74d68b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "local-test-grafana-alb",
            "security_groups": [
              "sg-0108d4a60ee538a0b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08265c1306cadf5f2"
              },
              {
                "subnet_id": "subnet-0f929b8fbd4a86d64"
              }
            ],
            "subnets": [
              "subnet-08265c1306cadf5f2",
              "subnet-0f929b8fbd4a86d64"
            ],
            "tags": {
              "Name": "local-test-prometheus-nlb"
            },
            "vpc_id": "vpc-0a3f9185b2c4191ac",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.mysql_infra.aws_security_group.module_sg"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mysql_nlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:loadbalancer/net/local-test-mysql-nlb/3e05a63155311d3a",
            "arn_suffix": "net/local-test-mysql-nlb/3e05a63155311d3a",
            "dns_name": "local-test-mysql-nlb-3e05a63155311d3a.elb.ap-south-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:loadbalancer/net/local-test-mysql-nlb/3e05a63155311d3a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "local-test-mysql-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08265c1306cadf5f2"
              },
              {
                "subnet_id": "subnet-0f929b8fbd4a86d64"
              }
            ],
            "subnets": [
              "subnet-08265c1306cadf5f2",
              "subnet-0f929b8fbd4a86d64"
            ],
            "tags": {
              "Name": "local-test-mysql-nlb"
            },
            "vpc_id": "vpc-0a3f9185b2c4191ac",
            "zone_id": "ZVDDRBQ08TROA"
          }
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "grafana_listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:listener/app/local-test-grafana-alb/79df55cfcd74d68b/858b4fa40a19d40c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-grafana-tg/5dbea79a37fbb738",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:listener/app/local-test-grafana-alb/79df55cfcd74d68b/858b4fa40a19d40c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:loadbalancer/app/local-test-grafana-alb/79df55cfcd74d68b",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.mysql_infra.aws_lb.grafana_alb",
            "module.mysql_infra.aws_lb_target_group.grafana_tg",
            "module.mysql_infra.aws_security_group.module_sg"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mysql_listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:listener/net/local-test-mysql-nlb/3e05a63155311d3a/bbcb95ebc96d6aa3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-mysql-tg/37525ab3987ce3d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:listener/net/local-test-mysql-nlb/3e05a63155311d3a/bbcb95ebc96d6aa3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:loadbalancer/net/local-test-mysql-nlb/3e05a63155311d3a",
            "port": 3306,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.mysql_infra.aws_lb.mysql_nlb",
            "module.mysql_infra.aws_lb_target_group.mysql_tg"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prometheus_listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:listener/app/local-test-grafana-alb/79df55cfcd74d68b/cbfaa4643f4677b4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-prometheus-tg/e6c4bf7c6b457d5f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:listener/app/local-test-grafana-alb/79df55cfcd74d68b/cbfaa4643f4677b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:loadbalancer/app/local-test-grafana-alb/79df55cfcd74d68b",
            "port": 9090,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.mysql_infra.aws_lb.grafana_alb",
            "module.mysql_infra.aws_lb_target_group.prometheus_tg",
            "module.mysql_infra.aws_security_group.module_sg"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-grafana-tg/5dbea79a37fbb738",
            "arn_suffix": "targetgroup/local-test-grafana-tg/5dbea79a37fbb738",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-grafana-tg/5dbea79a37fbb738",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "local-test-grafana-tg",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3f9185b2c4191ac"
          }
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mysql_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-mysql-tg/37525ab3987ce3d7",
            "arn_suffix": "targetgroup/local-test-mysql-tg/37525ab3987ce3d7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-mysql-tg/37525ab3987ce3d7",
            "lambda_multi_value_headers_enabled": false,
            "name": "local-test-mysql-tg",
            "port": 3306,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-0a3f9185b2c4191ac"
          }
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prometheus_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-prometheus-tg/e6c4bf7c6b457d5f",
            "arn_suffix": "targetgroup/local-test-prometheus-tg/e6c4bf7c6b457d5f",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "9090",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:227606451249:targetgroup/local-test-prometheus-tg/e6c4bf7c6b457d5f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "local-test-prometheus-tg",
            "port": 9090,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3f9185b2c4191ac"
          }
        }
      ]
    },
    {
      "module": "module.mysql_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "module_sg",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227606451249:security-group/sg-0108d4a60ee538a0b",
            "description": "Default security group created by terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0108d4a60ee538a0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9104,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9104
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "local-test-prometheus-sg",
            "name_prefix": null,
            "owner_id": "227606451249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "local-test-prometheus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3f9185b2c4191ac"
          }
        }
      ]
    }
  ]
}